# rasta-beings

./: .gitignore  CHECKLIST.md  Cargo.toml  README.md  TODO.md  commit_many.sh  fix_all_postgres.sh  readme.sh  readme.txt.save  update_handlers.sh
migrations/: 0001_initial_schema.sql
src/: main.rs  r2.rs
src/handlers/: admin.rs  cart.rs  cart.rs.backup  mod.rs  shop.rs
src/models/: cart.rs  mod.rs  product.rs
src/state/: mod.rs
src/templates/: mod.rs
