[package]
name = "rasta-beings"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
shuttle-runtime = "0.50.0"
shuttle-axum = "0.50.0"
shuttle-shared-db = { version = "0.50.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "rust_decimal"] }
axum-extra = { version = "0.9", features = ["multipart"] }
base64 = "0.22"
rust_decimal = { version = "1.33", features = ["db-postgres"] }

# R2 (S3-compatible) dependencies
aws-config = "1.1"
aws-sdk-s3 = { version = "1.14", features = ["behavior-version-latest"] }
aws-credential-types = "1.1"
uuid = { version = "1.6", features = ["v4"] }
